--- a/src/app/alert/alert.page.html
+++ b/src/app/alert/alert.page.html
@@ -11,4 +11,9 @@
   </ion-item>
 <ion-button expand="full" color="primary" (click)="presentAlert()">alert</ion-button>
 
+
+  <ion-button expand="full" routerLink="/home">
+  Volver
+  </ion-button>
+
 </ion-content>
