--- a/src/app/operaciones/operaciones.page.html
+++ b/src/app/operaciones/operaciones.page.html
@@ -10,25 +10,23 @@
     <ion-input [(ngModel)]="numero1"></ion-input>
   </ion-item>
   <ion-item>
+    <ion-label position="floating">Ingresa operación:</ion-label>
+    <ion-input [(ngModel)]="operacion"></ion-input>
+  </ion-item>
+  <ion-item>
     <ion-label position="floating">Ingresa segundo numero:</ion-label>
     <ion-input [(ngModel)]="numero2"></ion-input>
   </ion-item>
 
-  <ion-button color="primary" (click)="suma()" >
-    +
-  </ion-button>
-  <ion-button color="primary" (click)="resta()">
-    -
-  </ion-button>
-  <ion-button color="primary" (click)="multiplicacion()">
-    *
-  </ion-button>
-  <ion-button color="primary" (click)="division()" >
-    /
+  <ion-button expand="full" color="primary" (click)="result()" >
+    OPERAR
   </ion-button>
 
+   <h1> El resultado es: {{resultado}} </h1>
 
-    El resultado es: {{resultado}}
+   <ion-button expand="full" routerLink="/home">
+    Volver
+    </ion-button>
 
 
 
